# Cloudy-Server

./: Cargo.toml
src/: api.rs  environment.rs  jwt.rs  main.rs  mongodb.rs  rocket.rs  util.rs
src/api/: account.rs  auth.rs  setup.rs
src/api/account/: account-get.rs  account_get.rs  find.rs  id.rs  username.rs
src/api/account/find/: find-get.rs  find_get.rs
src/api/account/id/: avatar.rs  id-get.rs  id_get.rs
src/api/account/username/: username-get.rs
src/api/auth/: auth-get.rs  auth-post-request.rs  auth-post.rs  auth_post.rs  renew.rs
src/api/setup/: owner.rs  setup-get.rs  setup_environment.rs  setup_get.rs
src/environment/: environment-setup.rs  environment_setup.rs
src/jwt/: jwt-auth.rs  jwt-claims.rs  jwt-decode.rs  jwt-encode.rs  jwt-env.rs  jwt-setup.rs  jwt-state.rs  jwt_auth.rs  jwt_authorization_header.rs  jwt_claims.rs  jwt_decode.rs  jwt_encode.rs  jwt_environment.rs  jwt_setup.rs
src/mongodb/: collection.rs  collections.rs  mongodb-build.rs  mongodb-connect.rs  mongodb-filter.rs  mongodb-object-id.rs  mongodb-ping.rs  mongodb-setup.rs  mongodb-state.rs  mongodb_connect.rs  mongodb_env.rs  mongodb_environment.rs  mongodb_object_id.rs  mongodb_operator.rs  mongodb_ping.rs  mongodb_setup.rs
src/mongodb/collection/: account-token.rs  account.rs  account_directory.rs  account_file.rs  account_token.rs
src/mongodb/collections/: account-token.rs  account.rs
src/rocket/: cors.rs  options.rs  post_request_header.rs  request.rs
src/rocket/request/: header.rs  post_data.rs
src/util/: envvar.rs  time.rs  vec.rs
(+20 files in other folders)
