[package]
name = "cloudy-server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.192"

[dependencies.rocket]
version = "0.5.0-rc.4"
features = ["http2", "default", "json"]

[dependencies.mongodb]
version = "2.7.0"

[dependencies.jsonwebtoken]
version = "9.1.0"