[package]
name = "cloudy-server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Serde and related
[dependencies.serde]
version = "1.0.193"
features = ["derive"]
[dependencies]
serde_json = "1.0.108"

[dependencies.rocket]
version = "0.5.0"
features = ["http2", "default", "json"]

[dependencies.mongodb]
version = "2.7.1"

[dependencies.jsonwebtoken]
version = "9.2.0"